--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.8",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
