--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^35.1.0",
     "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@hookform/resolvers": "^2.9.10",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "date-fns": "^2.29.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.5",
-    "use-context-selector": "^1.4.1"
+    "use-context-selector": "^1.4.1",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
